welcome.lessons.welcome.bat.bool1.SumDouble.scala.error
sumDouble:2: error: not found: value reurn
  if(a==b){reurn (a+b)*2}
           ^