welcome.lessons.welcome.bat.bool1.SumDouble.scala.code
def sumDouble(a: Integer, b: Integer): Integer = {
  if(a==b){reurn (a+b)*2}
  else{return a+b}
}